# pharmadocs-rag

./: Dockerfile  README.md  docker-compose.yml  mlruns.db  pyproject.toml  requirements.txt
app/: __init__.py  pipeline.py
app/agents/: __init__.py  agent_graph.py  llm_client.py  rag_chain.py
app/api/: __init__.py  main.py
app/evaluation/: __init__.py  ragas_eval.py
app/ingestion/: __init__.py  chunking.py
app/monitoring/: __init__.py  drift_detection.py  experiment_tracking.py
app/retrieval/: __init__.py  embeddings.py  vectorstore.py
dags/: drift_monitoring_dag.py
data/eval/: baseline_scores.json  golden_set.json
data/processed/: chunks.jsonl
data/raw/: pharma_abstracts.json
mlruns/1/dcd944c515cf4ccb830de73d8cb6c25b/artifacts/: per_query_scores.json
scripts/: compare_chunking_strategies.py  run_evaluation.py
tests/: test_agent.py  test_api.py  test_chunking.py  test_drift_detection.py  test_evaluation.py  test_retrieval.py
