[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pharmadocs-rag"
version = "0.1.0"
description = "Production-style RAG pipeline with MLOps for biomedical document search"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu>=1.7",
    "rank-bm25>=0.2",
    "numpy>=1.24",
    "langgraph>=0.2",
    "mlflow>=2.10",
    "scipy>=1.11",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2.0",
]

[project.optional-dependencies]
prod = [
    "openai>=1.0",
    "sentence-transformers>=2.5",
]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
